Photo system fixed